# blog

./: .gitignore  .justfile  CLAUDE.md  Next  README.md  mkdocs.yml  package.json  pyproject.toml  requirements.txt  sync.sh  sync_and_build.sh  update_base_url.sh  vercel-build.sh  vercel-dev.sh  vercel-install.sh  vercel.json  vercel.sh
.github/workflows/: pages.yaml  release.yaml  testing.yaml
docs/: index.md
pages/: docs  mkdocs.vercel.yml  mkdocs.yml  vercel.json
pages/docs/: .gitignore  Affirmation.md  Affirmations.md  CFA Notes.md  Concepts.md  Email to Notary.md  Error.md  Fixed Income.md  Hash Slides.md  Resolve Merge Conflicts.md  Rough.md  VISA.md  Zawiadomienie o zmianie pracodawcy – Niebieska Karta UE.md  extensions.md  get_started.md  index.md  install.md  pages.md
pages/site/: index.html  sitemap.xml
scripts/: blog_automation.py  obsidian_to_admonition.py  sync-notes.py  test_processors.py
scripts/processors/: __init__.py  hard_line_breaks.py  obsidian_admonitions copy.py  obsidian_callouts.py  obsidian_links.py
shadcn/: filters.py  main.html
shadcn/components/: bottom_sidebar_item.html  sidebar_item.html  sidebar_section.html
shadcn/css/: base.css  custom.css  geist.css  overrides.css
shadcn/extensions/: obsidian_callouts.py
shadcn/js/: callbacks.js  copy-button.js
shadcn/plugins/: search.py
shadcn/templates/: bottom_navigation.html  bottom_sidebar.html  breadcrumbs.html  dark.html  echarts.html  (+8 more)
site/: index.html  sitemap.xml
tailwind/: admonition.css  article.css  details.css  fonts.css
tests/: test_obsidian_callouts.py
(+371 files in other folders)
